// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader: Match snapshots 1 1`] = `
<View>
  <StatusBar
    animated={false}
    backgroundColor="#17212D"
    barStyle="dark-content"
    hidden={false}
    showHideTransition="fade"
  />
  <ForwardRef(Themed.Header)
    centerComponent={
      <Logo
        color="#FFF"
        isDark={false}
      />
    }
    containerStyle={
      Array [
        Object {
          "borderBottomWidth": 2,
        },
        Object {
          "backgroundColor": "#17212D",
          "borderBottomColor": "#009CFF",
        },
      ]
    }
    rightComponent={
      <Themed.Icon
        color="#FFF"
        name="settings"
        onPress={[Function]}
        type="feather"
      />
    }
  />
</View>
`;

exports[`AppHeader: Match snapshots 2 1`] = `
<View>
  <StatusBar
    animated={false}
    backgroundColor="#FFF"
    barStyle="light-content"
    hidden={false}
    showHideTransition="fade"
  />
  <ForwardRef(Themed.Header)
    centerComponent={
      <Logo
        color="#17212D"
        isDark={true}
      />
    }
    containerStyle={
      Array [
        Object {
          "borderBottomWidth": 2,
        },
        Object {
          "backgroundColor": "#FFF",
          "borderBottomColor": "#E88C0C",
        },
      ]
    }
    rightComponent={
      <Themed.Icon
        color="#17212D"
        name="settings"
        onPress={[Function]}
        type="feather"
      />
    }
  />
</View>
`;
